tests/baselines/reference/privateNameStaticMethodAssignment.errors.txt
privateNameStaticMethodAssignment.ts(4,12): error TS2803: Cannot assign to private method '#method'. Private methods are not writable.
privateNameStaticMethodAssignment.ts(5,11): error TS2803: Cannot assign to private method '#method'. Private methods are not writable.
privateNameStaticMethodAssignment.ts(6,11): error TS2803: Cannot assign to private method '#method'. Private methods are not writable.
privateNameStaticMethodAssignment.ts(7,18): error TS2803: Cannot assign to private method '#method'. Private methods are not writable.
privateNameStaticMethodAssignment.ts(9,11): error TS2803: Cannot assign to private method '#method'. Private methods are not writable.


==== privateNameStaticMethodAssignment.ts (5 errors) ====
    class A3 {
        static #method() { };
        constructor(a: typeof A3, b: any) {
            A3.#method = () => {} // Error, not writable 
               ~~~~~~~
!!! error TS2803: Cannot assign to private method '#method'. Private methods are not writable.
            a.#method = () => { }; // Error, not writable 
              ~~~~~~~
!!! error TS2803: Cannot assign to private method '#method'. Private methods are not writable.
            b.#method =  () => { } //Error, not writable 
              ~~~~~~~
!!! error TS2803: Cannot assign to private method '#method'. Private methods are not writable.
            ({ x: A3.#method } = { x: () => {}}); //Error, not writable 
                     ~~~~~~~
!!! error TS2803: Cannot assign to private method '#method'. Private methods are not writable.
            let x = A3.#method;
            b.#method++ //Error, not writable 
              ~~~~~~~
!!! error TS2803: Cannot assign to private method '#method'. Private methods are not writable.
        }
    }
    